--- a/beauty-from-ashes.html
+++ b/beauty-from-ashes.html
@@ -267,12 +267,12 @@
             <div class="col-md-12" style="padding-bottom: 3em;">
                 <h3>Jazz Music Premiere</h3>
                 <h4 style="font-size: 20px; font-weight: 700;"><i>Survivors' Suite</i></h4>
-                <p>Greg Tardy weaves together written word and musical composition to tell a story of hope and redemption using scripture, poetry, survivors' words and compositions for a jazz quartet. The jazz quartet will be accompanied by narration by Greg Tardy's daughter, Abigail Tardy.</p>
+                <p>Gregory Tardy weaves together written word and musical composition to tell a story of hope and redemption using scripture, poetry, survivors' words and compositions for a jazz quartet. The jazz quartet will be accompanied by narration by Greg Tardy's daughter, Abigail Tardy.</p>
                 <br>
                 <div class="row">
                     <div class="col-md-3 bfa-artist-card">
                         <img src="assets/img/team/gregtardy.jpg" style="border-radius: 50%; width: 150px;">
-                        <h5 style="padding-top: 10px;">Greg Tardy</h5>
+                        <h5 style="padding-top: 10px;">Gregory Tardy</h5>
                         <span>Composer & Jazz Reedman</span>
                         <a class="bfa-modal-btn" type="button" data-bs-toggle="modal" data-bs-target="#gregbio">
                           View Bio
@@ -283,7 +283,7 @@
                       <div class="modal-dialog modal-dialog-centered modal-lg">
                         <div class="modal-content">
                           <div class="modal-header">
-                            <h1 class="modal-title fs-5" id="gregbioLabel">Meet Greg Tardy</h1>
+                            <h1 class="modal-title fs-5" id="gregbioLabel">Meet Gregory Tardy</h1>
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                           </div>
                           <div class="modal-body">
