--- a/beauty-from-ashes.html
+++ b/beauty-from-ashes.html
@@ -350,23 +350,30 @@
                       </div>
                     </div>
                     <div class="col-md-3 bfa-artist-card">
-                        <img src="assets/img/taber-gable.jpg" style="border-radius: 50%; width: 150px;">
-                        <h5 style="padding-top: 10px;">Taber Gable</h5>
+                        <img src="assets/img/margherita-fava.jpg" style="border-radius: 50%; width: 150px;">
+                        <h5 style="padding-top: 10px;">Margherita Fava</h5>
                         <span>Pianist</span>
-                        <a class="bfa-modal-btn" type="button" data-bs-toggle="modal" data-bs-target="#taberbio">
+                        <a class="bfa-modal-btn" type="button" data-bs-toggle="modal" data-bs-target="#margheritabio">
                           View Bio
                         </a>
                     </div>
                     <!-- Modal -->
-                    <div class="modal fade" id="taberbio" tabindex="-1" aria-labelledby="taberbioLabel" aria-hidden="true">
+                    <div class="modal fade" id="margheritabio" tabindex="-1" aria-labelledby="margheritabioLabel" aria-hidden="true">
                       <div class="modal-dialog modal-dialog-centered modal-lg">
                         <div class="modal-content">
                           <div class="modal-header">
-                            <h1 class="modal-title fs-5" id="taberbioLabel">Meet Taber Gable</h1>
+                            <h1 class="modal-title fs-5" id="margheritabioLabel">Meet Margherita Fava</h1>
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                           </div>
                           <div class="modal-body">
-                            <p>Graduate from The Juilliard School Taber Gable has been called on to perform worldwide alongside many great musicians such as Marcus/ E.J.Strickland, Terrace Martin, Steve Davis, Jonathan Barber, Gregory Tardy, Jimmy Greene, Jonathan Pinson, Braxton Cook, and more! Gable has two albums out "Hidden Driveways" 2020, "Push and Pull" 2025, and is a highly sought after musician on the New York, L.A., and Nashville music scenes as well as internationally known for his cross-genre abilities and captivating live performance style. In Fall of 2024 Taber Gable was appointed Jazz Piano Professor at the University of Tennessee and continues to travel and record internationally.</p>
+                            <p>Margherita Fava, is a pianist, composer, arranger, bandleader, and educator based in Knoxville, Tenn.</p>
+                            <p>She was born on October 16, 1995, into a family of classical musicians in the small village of Follina in northeast Italy. Her parents are baroque specialists, her father a violinist and her mother a cellist and singer.</p>
+                            <p>Fava started piano lessons at 10, picked up the electric bass as a teenager, and at 17 enrolled in a summer jazz program in nearby Venice sponsored by The New School from New York. One day she learned by ear Miles Davis' solo on "So What" from <i>Kind of Blue</i>. It changed her life. </p>
+                            <p>"It was the most exciting thing that has ever happened to me!" she says.</p>
+                            <p>A scholarship to Michigan State brought Fava to East Lansing, where she studied piano with Xavier Davis and came into the orbit of the charismatic bassist Rodney Whitaker. After graduating with a degree in jazz studies, she earned a master's degree in music at the University of Tennessee, studying piano with Eric Reed and composition with Greg Tardy.</p>
+                            <p>She currently collaborates with the Knoxville Jazz Orchestra on various projects like the concert series "NXT GEN" and the Knoxville Jazz Workshop.</p>
+                            <p>In August 2022 she released her first EP of original music entitled "Okra/Search of the Unknown", available on bandcamp.</p>
+                            <p>On March 10th 2023 her debut album "TATATU" was released, featuring Gregory Tardy, Michael Reed and Javier Enrique. The record received numerous positive reviews, including 4 stars on <i>Downbeat</i> and <i>AllAboutJazz</i>.</p>
                           </div>
                           <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
