--- a/beauty-from-ashes.html
+++ b/beauty-from-ashes.html
@@ -123,10 +123,9 @@
                 <p>Join us for an artistic evening where stories of suicide survival are told through music, dance, and art.</p>
                 <p class="description"><a href="https://maps.app.goo.gl/Z3rdfVbPXVDZkEwB8" target="_blank"><i class='bx bx-map'></i> The Square Room: 4 Market Square, Knoxville, TN 37902</a></p>
                 <p class="description"><i class='bx bx-calendar'></i> September 20, 2025</p>
-                <p class="description"><i class='bx bx-time-five' ></i> 7:00 PM</p>
-                <p class="description"><i class="bi bi-ticket"></i> $35 General | $50 VIP</p>
+                <p class="description">This event has passed, but if you are interested in bringing Beauty from Ashes to your city, please contact us!</p>
                 <div class="text-center">
-                    <a href="https://givebutter.com/beauty-from-ashes-sponsorships-2025" class="basic-btn">Become a Sponsor</a><a href="https://givebutter.com/beauty-from-ashes-2025-09-20" class="yellow-btn">Buy Tickets</a>
+                    <a href="/connect" class="basic-btn">Connect</a>
                 </div>
             </div>
             <hr style="border: solid 1px #e6c16f; opacity: 1;">
