--- a/index.html
+++ b/index.html
@@ -164,11 +164,10 @@
               <p class="description"><i>Transforming sorrow, grief, and despair into joy, beauty, and celebration.</i></p>
               <p class="description"><a href="https://maps.app.goo.gl/Z3rdfVbPXVDZkEwB8" target="_blank"><i class='bx bx-map'></i> The Square Room: 4 Market Square, Knoxville, TN 37902</a></p>
               <p class="description"><i class='bx bx-calendar'></i> September 20, 2025</p>
-              <p class="description"><i class='bx bx-time-five' ></i> 7:00 PM</p>
-              <p class="description"><i class="bi bi-ticket"></i> $35 General | $50 VIP</p>
+              <p class="description"></i>This event has passed, but if you are interested in bringing Beauty from Ashes to your city, please contact us!</p>
             </div>
             <div class="text-center">
-                <a href="beauty-from-ashes" class="basic-btn">Project Info</a><a href="https://givebutter.com/beauty-from-ashes-2025-09-20" class="yellow-btn">Buy Tickets</a>
+                <a href="beauty-from-ashes" class="basic-btn">Project Info</a>
             </div>
           </div>
         </div>
