--- a/events.html
+++ b/events.html
@@ -50,7 +50,8 @@
   <title>Transformance Art | Events</title>
 	<meta name="description" content="Explore our upcoming events and discover the impact of innovative fine arts experiences. Find inspiration, connection, and joy.">
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,700,700i&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,700,700i&display=swap">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/animate.css/animate.min.css" rel="stylesheet">
@@ -129,7 +130,7 @@
   <main id="main">
     <!-- ======= Service Details Section ======= -->
     <section class="service-details">
-    <div class="section-title text-white">
+    <!--<div class="section-title text-white">
         <h2>Upcoming Event</h2>
       </div>
       <div class="container">
@@ -154,12 +155,23 @@
             </div>
           </div>
         </div>
-      </div>
+      </div>-->
       <div class="section-title text-white">
         <h2>Past Events</h2>
       </div>
       <div class="container">
         <div class="row">
+          <div class="col-md-6 d-flex align-items-stretch" data-aos="fade-up">
+            <div class="card">
+              <div class="card-img">
+                <img src="assets/img/beauty-from-ashes.jpg" alt="Beauty from Ashes Event">
+              </div>
+              <div class="card-body">
+                <h5 class="card-title">Beauty from Ashes | Sept. 20, 2025</h5>
+                <p class="card-text">Music, dance, painting, and poetry are powerful mediums for expressing one's deepest emotions. Whether navigating the journey through depression and overcoming suicidal thoughts, surviving the loss of a loved one, or any stage in between, art serves as a vital tool for communication. It helps people find hope, healing, and restoration.</p>
+              </div>
+            </div>
+          </div>
           <div class="col-md-6 d-flex align-items-stretch" data-aos="fade-up">
             <div class="card">
               <div class="card-img">
