--- a/projects.html
+++ b/projects.html
@@ -34,7 +34,8 @@
 	<meta name="description" content="Explore the projects at Transformance Art, showcasing transformative works in music, dance, painting, poetry, and other art forms. Discover how our innovative arts initiatives enable individual and collective wellness through relevant fine arts experiences. See the impact of art in action and get inspired by our creative endeavors.">  
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,700,700i&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,700,700i&display=swap">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/animate.css/animate.min.css" rel="stylesheet">
