--- a/beauty-from-ashes.html
+++ b/beauty-from-ashes.html
@@ -34,7 +34,8 @@
 	<meta name="description" content="Discover the healing power of music, dance, painting, and poetry. Our curated artistic experience features original works by transformance artists and local community contributors, offering hope and restoration for those navigating life's challenges.">  
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,700,700i&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,700,700i&display=swap">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/animate.css/animate.min.css" rel="stylesheet">
