--- a/connect.html
+++ b/connect.html
@@ -34,7 +34,8 @@
 	<meta name="description" content="Get in touch with Transformance Art for general inquiries, partnership opportunities, or to get involved. Explore sponsorship options and connect with us to support and enhance our transformative art initiatives. Join our mission to fasciliate personal and societal wellness through relevant fine arts experiences.">  
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,700,700i&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,700,700i&display=swap">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/animate.css/animate.min.css" rel="stylesheet">
